--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "spuit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "JS + Sass Mixin Library",
-  "main": "index.js",
+  "main": "spuit.scss",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
