--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
   },
   "homepage": "https://github.com/is8r/spuit#readme",
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "css-loader": "^0.26.1",
-    "node-sass": "^4.5.0",
-    "postcss-loader": "^1.3.0",
-    "sass-loader": "^6.0.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.2.1"
+    "autoprefixer": "^7.1.4",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1"
   },
-  "dependencies": {
-    "webpack-dev-server": "^2.3.0"
-  }
+  "dependencies": {}
 }
