--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
   },
   "homepage": "https://github.com/is8r/spuit#readme",
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "bootstrap": "^4.0.0",
-    "css-loader": "^0.28.7",
+    "autoprefixer": "^9.6.0",
+    "bootstrap": "^4.3.1",
+    "css-loader": "^3.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
-    "popper.js": "^1.14.3",
-    "postcss-loader": "^2.0.10",
-    "sass-loader": "^6.0.6",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "spuit": "0.0.13",
-    "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-manifest-plugin": "^2.0.0-rc.2"
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "dependencies": {
-    "npm": "^6.0.1"
+    "npm": "^6.9.0"
   },
   "scripts": {
     "dev": "open http://localhost:8080/ && webpack-dev-server --progress --mode development --config webpack/webpack.config.js",
