--- a/site/themes/spuit/package.json
+++ b/site/themes/spuit/package.json
@@ -16,7 +16,7 @@
   "homepage": "",
   "devDependencies": {
     "autoprefixer": "^9.1.1",
-    "bootstrap": ">=4.3.1",
+    "bootstrap": "4.4.1",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "font-awesome": "^4.7.0",
