--- a/package.json
+++ b/package.json
@@ -8,40 +8,17 @@
     "url": "git+ssh://git@github.com/is8r/spuit.git"
   },
   "keywords": [],
-  "author": "Yu Ishihara",
-  "license": "ISC",
+  "author": "@is8r",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/is8r/spuit/issues"
   },
   "homepage": "https://github.com/is8r/spuit#readme",
   "devDependencies": {
-    "autoprefixer": "^9.6.0",
-    "bootstrap": "^4.3.1",
-    "css-loader": "^3.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.4.1",
-    "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "popper.js": "^1.15.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "spuit": "0.0.13",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.1",
-    "webpack-manifest-plugin": "^2.0.4"
   },
   "dependencies": {
     "npm": "^6.9.0"
   },
   "scripts": {
-    "dev": "webpack-dev-server --progress --mode development --config webpack/webpack.config.js --open-page index.html",
-    "watch": "webpack --watch --progress --mode development --config webpack/webpack.config.js",
-    "build": "webpack --progress --mode production --config webpack/webpack.config.js"
   }
 }
