--- a/site/themes/spuit/package.json
+++ b/site/themes/spuit/package.json
@@ -15,32 +15,32 @@
   },
   "homepage": "",
   "devDependencies": {
-    "autoprefixer": "^9.1.1",
+    "autoprefixer": "^9.7.4",
     "bootstrap": "4.4.1",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.4.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
-    "popper.js": "^1.14.3",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.13.1",
+    "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.0.1",
-    "spuit": "0.2.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": ">=3.1.11",
-    "webpack-manifest-plugin": "^2.0.0-rc.2"
+    "sass-loader": "^8.0.2",
+    "spuit": "0.2.1",
+    "style-loader": "^1.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": ">=3.10.3",
+    "webpack-manifest-plugin": "^2.2.0"
   },
   "scripts": {
     "dev": "webpack --watch --mode production",
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "lunr": "^2.2.0",
-    "npm-check-updates": "^3.0.3"
+    "lunr": "^2.3.8",
+    "npm-check-updates": "^4.0.1"
   }
 }
