--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,14 +13,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-      with:
-        path: 'site/*'
-    - name: Check local directory structure
-      run: |
-        cd site
-    - name: Check local directory structure
-      run: |
-        pwd
     - name: Build Site
       uses: chabad360/hugo-actions@master
     - name: Rsync deployments
@@ -32,7 +24,7 @@ jobs:
         flags: '-avzr --delete'
         options: ''
         ssh_options: '-p 2222'
-        src: 'public/'
+        src: 'site/public/'
         dest: 'nrm@ssh-nrm.heteml.net:web/spuit.12px.com'
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2.0.0
